--- a/main/res/values-night/themes.xml
+++ b/main/res/values-night/themes.xml
@@ -1,11 +1,11 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.QA" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="Theme.QA" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/blue_300</item>
         <item name="colorPrimaryDark">@color/blue_400</item>
         <item name="colorAccent">@color/blue_100</item>
-        <item name="background">@color/light_green</item>
+        <item name="background">@color/light</item>
         <item name="android:textSize">22dp</item>
         <!-- Customize your theme here. -->
     </style>
