--- a/main/res/values/colors.xml
+++ b/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="blue_300">#7776bc</color>
     <color name="blue_400">#7271B5</color>
     <color name="dark_blue">#242038</color>
-    <color name="light_green">#edeec9</color>
+    <color name="light">#EDECF1</color>
     <color name="white">#FFFFFF</color>
 
 </resources>
