--- a/main/res/layout/activity_registration.xml
+++ b/main/res/layout/activity_registration.xml
@@ -56,13 +56,14 @@
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/regButton"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="270dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="450dp"
         android:background="@color/blue_100"
         android:fontFamily="@font/gabriela"
+        android:onClick="onClickSave"
         android:text="Зарегистрироваться"
         android:textColor="@color/blue_400"
         android:textSize="20sp"
@@ -105,6 +106,7 @@
         android:textColor="@color/blue_400"
         app:layout_constraintBottom_toTopOf="@+id/password"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nickname" />
+        app:layout_constraintTop_toBottomOf="@+id/nickname"
+        app:layout_constraintVertical_bias="0.477" />
 
 </android.support.constraint.ConstraintLayout>
