--- a/main/res/layout/activity_enrty.xml
+++ b/main/res/layout/activity_enrty.xml
@@ -69,7 +69,7 @@
         app:layout_constraintVertical_bias="0.066" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/regButton"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="270dp"
         android:layout_height="wrap_content"
